# zs

./: README.md
CEServer/: _service  ceserver.spec
Multiwfn/: CMakeLists.txt  Multiwfn.spec
TriangleBin/: CMakeLists.txt  TriangleBin.spec  _service
grub2-theme-HatsuneMiku/: _service  grub2-theme-HatsuneMiku.spec
torzu/: _service  torzu-git.spec
yuzu-git/: _service  yuzu-git.spec
